Fixed table's description in dark mode

--- a/app/assets/stylesheets/table-list.tailwind.css
+++ b/app/assets/stylesheets/table-list.tailwind.css
@@ -1,4 +1,20 @@
 @layer components {
+    .table-legend {
+        @apply sm:flex sm:items-center p-5;
+    }
+
+    .table-legend .table-legend-description {
+        @apply sm:flex-auto;
+    }
+
+    .table-legend .table-legend-description h1 {
+        @apply text-base font-semibold leading-6;
+    }
+
+    .table-legend .table-legend-description p {
+        @apply mt-2 text-sm text-gray-700 dark:text-gray-300;
+    }
+
     .table-list {
         @apply w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400;
     }
